<resources>
    <string name="app_name">KSVCEM</string>
    <string name="title_activity_login_access">LoginAccess</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contact_us">Contact Us !</string>
    <string name="resgister">Resgister</string>
    <string name="upload_image">Upload Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_no">Phone No</string>
    <string name="roll_no">Roll No</string>
    <string name="otp">OTP</string>
    <string name="or_with">Or with</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="or">OR</string>
    <string name="log_in">LOG IN</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="registration">Registration</string>
    <string name="how_well_does_the_teacher_seem_to_understand_the_lesson">How well does the teacher seem to understand the lesson?</string>
    <string name="please_rate_how_prepared_your_teacher_for_the_lessons">Please rate how prepared your teacher for the lessons?</string>
    <string name="date">Date</string>
    <string name="feedback_form">FEEDBACK FORM</string>
    <string name="teacher_name">Teacher Name :</string>
    <string name="does_the_teacher_communicate_in_ways_you_can_understand">Does the teacher communicate in ways you can understand?</string>
    <string name="do_you_feel_encouraged_to_participate_the_lessons">Do you feel encouraged to participate the lessons?</string>
    <string name="the_teacher_use_enough_variety_and_creative_methodology">The teacher use enough variety and creative methodology.</string>
    <string name="does_the_teacher_seem_to_answer_questions_honestly_and_respectfully">Does the teacher seem to answer questions honestly and respectfully?</string>
    <string name="the_teacher_clearly_explain_expectations_to_the_class">The teacher clearly explain expectations to the class.</string>
    <string name="do_you_think_the_teacher_seem_attentive_to_students_needs">Do you think the teacher seem attentive to students needs?</string>
    <string name="do_you_think_the_teacher_use_class_time_wisely">Do you think the teacher use class time wisely?</string>
    <string name="additional_notes_comments_suggestions">Additional Notes/Comments/Suggestions?</string>
    <string name="type_here">Type here...</string>
    <string name="branch">Branch :</string>
    <string name="do_you_agree_with_the_teacher_style_of_teaching">Do you agree with the teacher style of teaching</string>
    <string name="score_1_5">Score 1-5</string>
    <string name="enter_the_faculty_name">Enter the Faculty Name</string>
    <string name="year">Year :</string>
    <string name="faculty_name">Faculty Name :</string>
    <string name="submit">Submit</string>
    <string name="name1">Name :</string>
    <string name="roll_no1">Roll No :</string>
    <string name="total">Total</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_open">Open Navigation Drawer</string>
    <string name="navigation_close">Close Navigation Drawer</string>

</resources>