<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Introduction"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:padding="20dp"
                app:srcCompat="@drawable/college_logo" />

            <Button
                android:id="@+id/Login"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_icons"
                android:fontFamily="sans-serif-black"
                android:padding="20dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#250909"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/Register"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_icons"
                android:fontFamily="sans-serif-black"
                android:padding="20dp"
                android:text="REGISTER"
                android:textAlignment="center"
                android:textColor="#250909"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/contact_us"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/contact_us"
                android:textAlignment="gravity"
                android:textColor="#7A7575"
                android:textColorLink="#1C1B1B"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>



