<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="-10dp"
    android:orientation="vertical"
    app:layout_insetEdge="none"
    tools:context=".loginSignIn">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:paddingStart="10dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/login" />

            </LinearLayout>

            <TextView
                android:id="@+id/Login_SignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/auth_points"
                android:backgroundTint="#40493030"
                android:drawableStart="@drawable/user"
                android:drawablePadding="20dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/auth_points"
                android:backgroundTint="#40493030"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/loggedin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_icons"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="#250909"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/newuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="Not Registered Yet? Sign Up"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view2"
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:background="#6A6868"
                    android:foregroundGravity="center" />

                <TextView
                    android:id="@+id/OR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="#6A6868"
                    android:foregroundGravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:scaleX="0.7"
                android:scaleY="0.7">

                <TextView
                    android:id="@+id/Google_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="40dp"
                    android:drawablePadding="20dp"
                    android:drawingCacheQuality="high"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/continue_with_google"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/google1" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>