<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/login_bg"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".login_authenticate">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:background="@drawable/auth_points"
        android:backgroundTint="#B2B0AF"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/Registration"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/registration"
            android:textColor="#0B0000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/auth_points"
            android:backgroundTint="#8E8C8B"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="Enter Name"
            android:inputType="textPersonName"
            android:textColorHint="#616161"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/branch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/auth_points"
            android:backgroundTint="#8E8C8B"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="Enter Branch"
            android:inputType="textPersonName"
            android:textColorHint="#616161"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/auth_points"
            android:backgroundTint="#8E8C8B"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="Enter Year"
            android:inputType="textPersonName"
            android:textColorHint="#616161"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/Roll_No"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/auth_points"
            android:backgroundTint="#8E8C8B"
            android:ems="10"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="Enter College Roll No"
            android:inputType="number"
            android:textColorHint="#616161"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/auth_points"
            android:backgroundTint="#8E8C8B"
            android:ems="10"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColorHint="#616161"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/auth_points"
            android:backgroundTint="#8E8C8B"
            android:ems="10"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="Create Password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="#616161"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/Phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/auth_points"
            android:backgroundTint="#8E8C8B"
            android:ems="10"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="Enter Phone No"
            android:importantForAutofill="no"
            android:inputType="number|phone"
            android:padding="15dp"
            android:textColorHint="#616161"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/loggedin"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_icons"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="#250909"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/alreadylogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="Already Registered? Sign In"
            android:textColor="#27271D"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#0E0E0E" />

            <TextView
                android:id="@+id/OR"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="#1C1C1B"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/view4"
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#0C0C0C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Google_login"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="#B5C0D5DD"
                android:drawingCacheQuality="high"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/continue_with_google"
                android:textColor="#27271D"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/google1"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>